--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "gift app server",
   "main": "index.js",
   "scripts": {
-    "start": "PORT=5000 node nodemon app.js",
+    "start": "PORT=5000 nodemon node app.js",
+    "deploy": "PORT=5000 node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yael Lotan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
+    "pg": "^8.0.2",
+    "sequelize": "^5.21.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
