--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Yael Lotan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
