--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Yael Lotan",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.663.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "pg": "^8.0.2",
     "sequelize": "^5.21.6"
