fix(package.json): scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "gift app server",
   "main": "index.js",
   "scripts": {
-    "start": "PORT=5000 nodemon node app.js",
+    "start": "node app.js",
+    "start:dev": "PORT=5000 nodemon node app.js",
     "deploy": "PORT=5000 node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
